// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mobile BasicLayout 📱 base use 1`] = `
<div
  class="ant-design-pro ant-pro-basicLayout screen-xs ant-pro-basicLayout-mobile"
>
  <section
    class="ant-layout ant-layout-has-sider"
    style="min-height:100%"
  >
    <div
      class=""
    >
      <div
        class="ant-drawer ant-drawer-left ant-pro-drawer-sider"
        style="padding:0;height:100vh"
        tabindex="-1"
      >
        <div
          class="ant-drawer-mask"
        />
        <div
          class="ant-drawer-content-wrapper"
          style="transform:translateX(-100%);-ms-transform:translateX(-100%);width:208px"
        >
          <div
            class="ant-drawer-content"
          >
            <div
              class="ant-drawer-wrapper-body"
            >
              <div
                class="ant-drawer-header-no-title"
              >
                <button
                  aria-label="Close"
                  class="ant-drawer-close"
                  style="--scroll-bar:0px"
                >
                  <span
                    aria-label="close"
                    class="anticon anticon-close"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      class=""
                      data-icon="close"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 00203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
                      />
                    </svg>
                  </span>
                </button>
              </div>
              <div
                class="ant-drawer-body"
                style="height:100vh;padding:0;display:flex;flex-direction:row"
              >
                <aside
                  class="ant-layout-sider ant-layout-sider-dark ant-pro-sider"
                  style="overflow:hidden;flex:0 0 208px;max-width:208px;min-width:208px;width:208px"
                >
                  <div
                    class="ant-layout-sider-children"
                  >
                    <div
                      class="ant-pro-sider-logo"
                      id="logo"
                    >
                      <a>
                        <img
                          alt="logo"
                          src="https://gw.alipayobjects.com/zos/antfincdn/PmY%24TNNDBI/logo.svg"
                        />
                        <h1>
                          Ant Design Pro
                        </h1>
                      </a>
                    </div>
                    <div
                      style="flex:1;overflow-y:auto;overflow-x:hidden"
                    />
                    <div
                      class="ant-pro-sider-links"
                    >
                      <ul
                        class="ant-menu ant-menu-dark ant-pro-sider-link-menu ant-menu-root ant-menu-inline"
                        role="menu"
                      />
                    </div>
                  </div>
                </aside>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <section
      class="ant-layout"
      style="position:relative"
    >
      <header
        class="ant-layout-header"
        style="padding:0;height:48px;line-height:48px;width:100%;z-index:9"
      >
        <div
          class="ant-pro-global-header ant-pro-global-header-layout-side"
        >
          <span
            class="ant-pro-global-header-logo"
          >
            <a>
              <img
                alt="logo"
                src="https://gw.alipayobjects.com/zos/antfincdn/PmY%24TNNDBI/logo.svg"
              />
            </a>
          </span>
          <span
            class="ant-pro-global-header-collapsed-button"
          >
            <span
              aria-label="menu-fold"
              class="anticon anticon-menu-fold"
              role="img"
            >
              <svg
                aria-hidden="true"
                class=""
                data-icon="menu-fold"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M408 442h480c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8H408c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8zm-8 204c0 4.4 3.6 8 8 8h480c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8H408c-4.4 0-8 3.6-8 8v56zm504-486H120c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8zm0 632H120c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8zM115.4 518.9L271.7 642c5.8 4.6 14.4.5 14.4-6.9V388.9c0-7.4-8.5-11.5-14.4-6.9L115.4 505.1a8.74 8.74 0 000 13.8z"
                />
              </svg>
            </span>
          </span>
          <div
            style="flex:1"
          />
        </div>
      </header>
      <main
        class="ant-layout-content ant-pro-basicLayout-content ant-pro-basicLayout-has-header"
      />
    </section>
  </section>
</div>
`;

exports[`mobile BasicLayout 📱 collapsed=false 1`] = `
<div
  class="ant-design-pro ant-pro-basicLayout screen-xs ant-pro-basicLayout-mobile"
>
  <section
    class="ant-layout ant-layout-has-sider"
    style="min-height:100%"
  >
    <div
      class=""
    >
      <div
        class="ant-drawer ant-drawer-left ant-pro-drawer-sider"
        style="padding:0;height:100vh"
        tabindex="-1"
      >
        <div
          class="ant-drawer-mask"
        />
        <div
          class="ant-drawer-content-wrapper"
          style="transform:translateX(-100%);-ms-transform:translateX(-100%);width:208px"
        >
          <div
            class="ant-drawer-content"
          >
            <div
              class="ant-drawer-wrapper-body"
            >
              <div
                class="ant-drawer-header-no-title"
              >
                <button
                  aria-label="Close"
                  class="ant-drawer-close"
                  style="--scroll-bar:0px"
                >
                  <span
                    aria-label="close"
                    class="anticon anticon-close"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      class=""
                      data-icon="close"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 00203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
                      />
                    </svg>
                  </span>
                </button>
              </div>
              <div
                class="ant-drawer-body"
                style="height:100vh;padding:0;display:flex;flex-direction:row"
              >
                <aside
                  class="ant-layout-sider ant-layout-sider-dark ant-pro-sider"
                  style="overflow:hidden;flex:0 0 208px;max-width:208px;min-width:208px;width:208px"
                >
                  <div
                    class="ant-layout-sider-children"
                  >
                    <div
                      class="ant-pro-sider-logo"
                      id="logo"
                    >
                      <a>
                        <img
                          alt="logo"
                          src="https://gw.alipayobjects.com/zos/antfincdn/PmY%24TNNDBI/logo.svg"
                        />
                        <h1>
                          Ant Design Pro
                        </h1>
                      </a>
                    </div>
                    <div
                      style="flex:1;overflow-y:auto;overflow-x:hidden"
                    />
                    <div
                      class="ant-pro-sider-links"
                    >
                      <ul
                        class="ant-menu ant-menu-dark ant-pro-sider-link-menu ant-menu-root ant-menu-inline"
                        role="menu"
                      />
                    </div>
                  </div>
                </aside>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <section
      class="ant-layout"
      style="position:relative"
    >
      <header
        class="ant-layout-header"
        style="padding:0;height:48px;line-height:48px;width:100%;z-index:9"
      >
        <div
          class="ant-pro-global-header ant-pro-global-header-layout-side"
        >
          <span
            class="ant-pro-global-header-logo"
          >
            <a>
              <img
                alt="logo"
                src="https://gw.alipayobjects.com/zos/antfincdn/PmY%24TNNDBI/logo.svg"
              />
            </a>
          </span>
          <span
            class="ant-pro-global-header-collapsed-button"
          >
            <span
              aria-label="menu-fold"
              class="anticon anticon-menu-fold"
              role="img"
            >
              <svg
                aria-hidden="true"
                class=""
                data-icon="menu-fold"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M408 442h480c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8H408c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8zm-8 204c0 4.4 3.6 8 8 8h480c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8H408c-4.4 0-8 3.6-8 8v56zm504-486H120c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8zm0 632H120c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8zM115.4 518.9L271.7 642c5.8 4.6 14.4.5 14.4-6.9V388.9c0-7.4-8.5-11.5-14.4-6.9L115.4 505.1a8.74 8.74 0 000 13.8z"
                />
              </svg>
            </span>
          </span>
          <div
            style="flex:1"
          />
        </div>
      </header>
      <main
        class="ant-layout-content ant-pro-basicLayout-content ant-pro-basicLayout-has-header"
      />
    </section>
  </section>
</div>
`;

exports[`mobile BasicLayout 📱 layout=mix 1`] = `
<div
  class="ant-design-pro ant-pro-basicLayout screen-xs ant-pro-basicLayout-mobile"
>
  <section
    class="ant-layout ant-layout-has-sider"
    style="min-height:100%"
  >
    <div
      class=""
    >
      <div
        class="ant-drawer ant-drawer-left ant-pro-drawer-sider"
        style="padding:0;height:100vh"
        tabindex="-1"
      >
        <div
          class="ant-drawer-mask"
        />
        <div
          class="ant-drawer-content-wrapper"
          style="transform:translateX(-100%);-ms-transform:translateX(-100%);width:208px"
        >
          <div
            class="ant-drawer-content"
          >
            <div
              class="ant-drawer-wrapper-body"
            >
              <div
                class="ant-drawer-header-no-title"
              >
                <button
                  aria-label="Close"
                  class="ant-drawer-close"
                  style="--scroll-bar:0px"
                >
                  <span
                    aria-label="close"
                    class="anticon anticon-close"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      class=""
                      data-icon="close"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 00203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
                      />
                    </svg>
                  </span>
                </button>
              </div>
              <div
                class="ant-drawer-body"
                style="height:100vh;padding:0;display:flex;flex-direction:row"
              >
                <aside
                  class="ant-layout-sider ant-layout-sider-dark ant-pro-sider"
                  style="overflow:hidden;flex:0 0 208px;max-width:208px;min-width:208px;width:208px"
                >
                  <div
                    class="ant-layout-sider-children"
                  >
                    <div
                      style="flex:1;overflow-y:auto;overflow-x:hidden"
                    />
                    <div
                      class="ant-pro-sider-links"
                    >
                      <ul
                        class="ant-menu ant-menu-dark ant-pro-sider-link-menu ant-menu-root ant-menu-inline"
                        role="menu"
                      />
                    </div>
                  </div>
                </aside>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <section
      class="ant-layout"
      style="position:relative"
    >
      <header
        class="ant-layout-header"
        style="height:48px;line-height:48px;background:transparent"
      />
      <header
        class="ant-layout-header ant-pro-fixed-header"
        style="padding:0;height:48px;line-height:48px;width:100%;z-index:100;right:0"
      >
        <div
          class="ant-pro-global-header ant-pro-global-header-layout-mix"
        >
          <span
            class="ant-pro-global-header-logo"
          >
            <a>
              <img
                alt="logo"
                src="https://gw.alipayobjects.com/zos/antfincdn/PmY%24TNNDBI/logo.svg"
              />
            </a>
          </span>
          <span
            class="ant-pro-global-header-collapsed-button"
          >
            <span
              aria-label="menu-fold"
              class="anticon anticon-menu-fold"
              role="img"
            >
              <svg
                aria-hidden="true"
                class=""
                data-icon="menu-fold"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M408 442h480c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8H408c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8zm-8 204c0 4.4 3.6 8 8 8h480c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8H408c-4.4 0-8 3.6-8 8v56zm504-486H120c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8zm0 632H120c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8zM115.4 518.9L271.7 642c5.8 4.6 14.4.5 14.4-6.9V388.9c0-7.4-8.5-11.5-14.4-6.9L115.4 505.1a8.74 8.74 0 000 13.8z"
                />
              </svg>
            </span>
          </span>
          <div
            style="flex:1"
          />
        </div>
      </header>
      <main
        class="ant-layout-content ant-pro-basicLayout-content ant-pro-basicLayout-has-header"
      />
    </section>
  </section>
</div>
`;
